	* Converted the codecs to use Libtool libltdl for dynamic loading.
2016-12-09 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'src/glassplayer/dev_portaudio.cpp' that broke the
	build when PortAudio was not enabled.
	* Added Ogg codec load paths for Windows in
	'src/glassplayer/codec_ogg.cpp'.
	* Added a 'make win32-install-ogg' target in 'Makefile.am'.
2016-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a Windows Multimedia audio device in
	'src/glassplayer/dst_mme.cpp' and 'src/glassplayer/dst_mme.h'.
2016-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Removed PortAudio support.
2016-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'src/glassplayer/dev_mme.cpp' that broke the build
	under Linux.
2016-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Modified glassplayer(1) to use 'MME' as the default audio device
	under Windows.
2016-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a '--mme-device-id=' switch for glassplayer(1).
	* Implemented the Stats interface for the MME driver.
2016-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up warnings in 'src/common/audiodevice.cpp'.
	* Cleaned up warnings in 'src/common/cmdswitch.cpp'.
2016-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'src/common/cmdswitch.cpp' and
	'src/glassplayer/dev_mme.cpp' that broke the build under Linux.
2016-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Refactored temporary file creation code in
	'src/glassplayer/serverid.cpp' to work correctly under Windows.
2016-12-20 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the Windows MME driver so as not to deadlock when
	playing File Server sources.
2017-09-04 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/dev_alsa.cpp' that caused a hang
	at startup for File Server sources shorter than 2*samplerate frames.
	* Added a workaround for a bug in ALSA that causes garbage to be
	appended to the final PCM block written.